Dark mode fixes

--- a/styles/ant.less
+++ b/styles/ant.less
@@ -72,10 +72,6 @@ body {
   --cr-error-color: #E84749;
   --cr-primary-color: #5273E0;
 
-  .ant-tag {
-    border-color: transparent;
-  }
-
   body::-webkit-scrollbar-track {
     background-color: var(--cr-tertiary-bg);
   }
@@ -94,6 +90,7 @@ body {
 }
 
 .ant-tag {
+  border-color: transparent;
   background-color: var(--cr-tertiary-bg);
   border-radius: 2px;
   color: var(--cr-primary-text);
